<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="ExtraTranslation">
    <string name="app_name">The Secret Psychics</string>
    <string name="facebook_app_id">2184916871586943</string>
    <string name="fb_login_protocol_scheme">fb2184916871586943</string>
    <string name="title">World-class</string>
    <string name="advisors">Choose an advisor who</string>
    <string name="creataccount">By clicking \'create account\' you agree to our</string>
    <string name="dont">Dont\'t have an account?</string>
    <string name="start">GOT IT</string>
    <string name="next">NEXT</string>
    <string name="next_title_case">Next</string>
    <string name="skip">SKIP</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="mail">mail@yahoo.com</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="description">I\'m a love psychic and egyptian tarot card \n reader with over 48 years of experience </string>
    <string name="order_question">This is What i will write as my order Question? </string>
    <string name="descriptions">Some description here and some description where and also this is the additional description.Some description here nad some description where and also this is the additional description.</string>
    <string name="feedback">Feedback &amp; Review:</string>
    <string name="feedbackvalueable">Please give your valueable feedback, related to my services:</string>
    <string name="cashback">Make a purchase then come \n   back to see how much \n cashback you earned</string>
    <string name="cashback_label">Cashback</string>
    <string name="rate">Please take a moment \n  rate us!</string>
    <string name="promocode">Please enter your promo code \n  or referral code \n below</string>
    <string name="someheading">Seprated they live in Bookmarksgrove right the cost of the semantics, a large language ocean.</string>
    <string name="Vokalia">Have you ever finally just gave in to the temptation and read your horoscope inr he newspaper on sunday morning?  </string>
    <string name="payment">You can make the payment with:  \n Visa, Paypal</string>
    <string name="socialized">You can make the payment with:  \n Visa, Paypal</string>
    <string name="description_tommy">Some text wich the advsior\nlike to edit is per his/her\nneeds</string>
    <string name="service">About my\nServices</string>
    <string name="request">Request a 3 minute video reading to be delivered \n delivered within 24 hours</string>
    <string name="live">Get a live text reading now limit to 160 characters</string>
    <string name="aboutmyservices">Seprated they live in Bookmarksgrove right at the \n coast of the semantics, a large language oceans</string>
    <string name="upload">Please know that you can only add the video , befor the advsior checks \n and replies to your question.</string>
    <string name="chat">Please know that choosing to message any psychic below would \n result in the initiation of a paid session</string>
    <string name="main_description">Relationships, family, career, spirituality and more</string>
    <string name="main_titles">Psychic &amp; Tarot Readings</string>
    <string name="welcome_2">Psychic &amp; Tarot Readings</string>
    <string name="welcome2_desc">Relationships, family, career, spirituality and more</string>
    <string name="welcom3_title">Psychic &amp; Tarot Readings</string>
    <string name="welcome3_desc">Get a Video Reading from a Professional</string>
    <string name="get_me_started">Get me started</string>
    <string name="already_have_account">Already have an account ?</string>
    <string name="sign_in">Sign in</string>
    <string name="enter">Enter</string>
    <string name="signup">Sign Up</string>
    <string name="signup_fb">Sign up with Facebook</string>
    <string name="signup_google">Sign up with Google+</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="remember_me">Remember me</string>
    <string name="forget_pass">Forgot Password ?</string>
    <string name="signup_as_advoisor">Sign up as an Advisor</string>
    <string name="signup_as_client">Sign up as a Client</string>
    <string name="become_advisor">Becoming an Advisor</string>
    <string name="select_language">Select your Language:</string>
    <string name="english">English</string>
    <string name="espanol">Espanol</string>
    <string name="language_txt">Select language above to change Application language</string>
    <string name="language_txt2">In which language wil you offer your services?</string>
    <string name="advisors_terms_and_condition"><![CDATA[Advisor Terms & Conditions]]></string>
    <string name="content_setup_profile">Have you ever finally just gave in to the temptation and read your horoscope in the newspaper on Sunday morning?</string>
    <string name="advisor_setup_profile">Advisor Profile Setup</string>
    <string name="advisor_general_info">General Information</string>
    <string name="screen_name">Screen Name</string>
    <string name="service_name">Service Name</string>
    <string name="email_address">Email Address</string>
    <string name="no_internet">Please Connect to Network!</string>
    <string name="profile_info">Profile Information</string>
    <string name="descriptive_info">Please be as Descriptive as Possible</string>
    <string name="service_description">Service Description</string>
    <string name="about_me">About me</string>
    <string name="ordering_instruction">Ordering Instructions</string>
    <string name="optional">Optional</string>
    <string name="example_ording_instruction_txt">Example: \"Please include your first name\"</string>
    <string name="profile_video">Profile Video</string>
    <string name="payment_details">Payment Details</string>
    <string name="some_text">Some Text</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="day">Day</string>
    <string name="month">Month</string>
    <string name="year">Year</string>
    <string name="permanent_address">Parmanent Address</string>
    <string name="zip_code">Zip Code</string>
    <string name="payment_threshold">Payment Threshold</string>
    <string name="my_jobs">My Jobs</string>
    <string name="revenues">Revenues</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="rate_us">Love this app? Rate us</string>
    <string name="invite_friend">Invite Friends</string>
    <string name="language">Language</string>
    <string name="customer_support">Customer Support</string>
    <string name="our_website">Our Website</string>
    <string name="settings">Settings</string>
    <string name="switch_to_client">Switch to Client Mode</string>
    <string name="my_profile">My Profile</string>
    <string name="send">Send</string>
    <string name="home">Home</string>
    <string name="categories">Categories</string>
    <string name="my_orders">My Orders</string>
    <string name="favourite_advisor">Favorite Advisors</string>
    <string name="credit">Credit</string>
    <string name="cashback_title">Cashback</string>
    <string name="invite_friends">Invite Friends</string>
    <string name="promo_code">Apply Promo Code</string>
    <string name="psychic_apply_here">Psychic? Apply here</string>
    <string name="the_secret_psychic">The Secret Psychic</string>
    <string name="featured_psychics">Featured Psychics</string>
    <string name="sort_by">Sort by</string>
    <string name="user_ratting">User rating</string>
    <string name="price_per_min">Price per minute (low to high)</string>
    <string name="price_per_min_2">Price per minute (high to low)</string>
    <string name="no_of_reviews">Number of Reviews</string>
    <string name="filter_by">Filter</string>
    <string name="video_message">Video Message</string>
    <string name="live_chat">Live Chat</string>
    <string name="both">Both</string>
    <string name="price_range_per_min">Price range (per minute)</string>
    <string name="pound">\u00a3</string>
    <string name="zero">0</string>
    <string name="ten">10</string>
    <string name="hundred">100</string>
    <string name="five_hundred">500</string>
    <string name="include_offline_advisors">Include Offline Advisors</string>
    <string name="topup_packs">Topup Packs</string>
    <string name="five_pound_credit">\u00a34.99 Credit</string>
    <string name="ten_pound_credit">\u00a39.99 Credit</string>
    <string name="fifteen_pound_credit">\u00a314.99 Credit</string>
    <string name="fifty_pound_credit">\u00a349.99 Credit</string>
    <string name="hundred_pound_credit">\u00a399.99 Credit</string>
    <string name="featured_package">Featured Package</string>
    <string name="value_package">Value Package</string>
    <string name="five_pound_bonus">+\u00a35 bonus</string>
    <string name="ten_pound_bonus">+\u00a310 bonus</string>
    <string name="profile_setting">Profile Settings</string>
    <string name="change_password">Change Password</string>
    <string name="notification">Notification</string>
    <string name="refresh_automatically">Refresh Automatically</string>
    <string name="about_us">About us</string>
    <string name="terms_of_service">Terms of Service</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="psychic_website">The Secret Psychic Website</string>
    <string name="personal_info">Personal Information</string>
    <string name="full_name">Full Name</string>
    <string name="some_one_customer">Some one Customer</string>
    <string name="phone_number">####</string>
    <string name="email">Email</string>
    <string name="save">Save</string>
    <string name="favourite_advisors">Favourite Advisors</string>
    <string name="get_10_percent_cash_back">Get 10% Cashback</string>
    <string name="cash_back_text">Make a purchase then come back to see how much cashback you earned</string>
    <string name="ok">ok</string>
    <string name="apply_promo_code">Apply Promo Code</string>
    <string name="enter_referal_code">Please enter your promo code or referral code below</string>
    <string name="promo_code_enter">Promo Code</string>
    <string name="submit">Submit</string>
    <string name="description_txt">Description</string>
    <string name="email_hint">user@email.com</string>
    <string name="confirm_pass">Confirm Password</string>
    <string name="enter_email">Please Enter Email</string>
    <string name="enter_valid_email">Please Enter Valid Email</string>
    <string name="enter_password">Please Enter Password</string>
    <string name="password_length">Password length is greater than 6 characters</string>
    <string name="confirm_password_length">Confirm password length is greater than 6 characters</string>
    <string name="cancel">Cancel</string>
    <string name="feedback_and_review"><![CDATA[Feedback & Review:]]></string>
    <string name="review_my_service">Please give your valuable feedback, related to my services:</string>
    <string name="feedback_with_colon">Feedback:</string>
    <string name="enter_feedback">Enter your feedback</string>
    <string name="reason_decline">Reason For Decline</string>
    <string name="reason">Reason</string>
    <string name="password_reset">Password Reset ?</string>
    <string name="notifications">Notifications</string>
    <string name="have_a_promo_code">Have a Promo Code?</string>
    <string name="promo_code_label">Promo Code</string>
</resources>