<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/whitess"

    android:orientation="vertical">


    <include layout="@layout/toolbar_with_menu_white" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <customfonts.textview_fira_sans_bold
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/_10sdp"
            android:text="@string/profile_setting"
            android:textColor="@color/background"
            android:textSize="@dimen/_18sdp" />

        <customfonts.textview_fira_sans_regular
            android:id="@+id/edit_profile_tv"
            android:visibility="visible"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/_10sdp"
            android:text="@string/edit_profile"
            android:textSize="@dimen/_14sdp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.7dp"
            android:background="@color/border_color"></View>

        <customfonts.textview_fira_sans_regular
            android:id="@+id/changePassTv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/_10sdp"
            android:text="@string/change_password"
            android:textSize="@dimen/_14sdp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.7dp"
            android:background="@color/border_color"></View>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <customfonts.textview_fira_sans_regular
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/_10sdp"
                android:text="@string/notifications"
                android:textSize="@dimen/_14sdp" />

            <android.support.v7.widget.SwitchCompat
                android:id="@+id/switchNoti"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingRight="@dimen/_10sdp"
                android:theme="@style/SCBSwitch" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.7dp"
            android:background="@color/border_color">

        </View>


        <customfonts.textview_fira_sans_bold
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/_10sdp"
            android:text="Support"
            android:textColor="@color/background"
            android:textSize="@dimen/_18sdp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.7dp"
            android:background="@color/border_color">

        </View>


        <customfonts.textview_fira_sans_regular
            android:id="@+id/about_us_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/_10sdp"
            android:text="@string/about_us"
            android:textSize="@dimen/_14sdp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.7dp"
            android:background="@color/border_color">

        </View>

        <customfonts.textview_fira_sans_regular
            android:id="@+id/terms_of_service_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/_10sdp"
            android:text="@string/terms_of_service"
            android:textSize="@dimen/_14sdp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.7dp"
            android:background="@color/border_color">

        </View>

        <customfonts.textview_fira_sans_regular
            android:id="@+id/privacy_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/_10sdp"
            android:text="@string/privacy_policy"
            android:textSize="@dimen/_14sdp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.7dp"
            android:background="@color/border_color">

        </View>

        <customfonts.textview_fira_sans_regular
            android:id="@+id/website_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/_10sdp"
            android:text="@string/psychic_website"
            android:textSize="@dimen/_14sdp" />


    </LinearLayout>
</LinearLayout>
