<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/whitess"
    android:padding="@dimen/_10sdp">


    <customfonts.textview_fira_sans_regular
        android:id="@+id/title_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/password_reset"
        android:textColor="@color/black"
        android:textSize="@dimen/_14sdp" />


    <customfonts.edittext_fira_sans_regular
        android:id="@+id/enter_email_tv"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:layout_below="@+id/title_tv"
        android:layout_marginTop="@dimen/_10sdp"
        android:background="@drawable/rounded_corners_white_stroke_black"
        android:hint="@string/enter_email"
        android:imeOptions="actionDone"
        android:inputType="textEmailAddress"
        android:padding="@dimen/_8sdp"
        android:singleLine="true"
        android:text=""
        android:textSize="@dimen/_12sdp" />


    <customfonts.textview_fira_sans_regular
        android:id="@+id/submit_tv"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:layout_below="@+id/enter_email_tv"
        android:layout_marginTop="@dimen/_10sdp"
        android:background="@drawable/rounded_green"
        android:gravity="center"
        android:text="@string/submit"
        android:textColor="@color/whitess"
        android:textSize="@dimen/_12sdp" />

</RelativeLayout>